<resources>
    <string name="app_name">WinCDSPro</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="action_server_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="action_user_settings">User / Login</string>
    <string name="action_about">About</string>
    <string name="program_name">WinCDSPro</string>
    <string name="app_website">http://www.wincds.net</string>
    <string name="app_support_email">simplifiedposonline@gmail.com</string>
    <string name="action_debug">Debug</string>
    <string name="action_help">Help</string>
</resources>