<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:id="@+id/menu_settings">
        <item
            android:id="@+id/action_settings"
            android:onClick="main_menu_settings"
            android:orderInCategory="100"
            android:title="@string/action_server_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_user"
            android:onClick="main_menu_settings_user"
            android:orderInCategory="100"
            android:title="@string/action_user_settings"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/menu_program">
        <item
            android:id="@+id/action_about"
            android:onClick="main_menu_about"
            android:orderInCategory="100"
            android:title="@string/action_about"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_debug"
            android:onClick="main_menu_debug"
            android:orderInCategory="100"
            android:title="@string/action_debug"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_help"
            android:onClick="main_menu_help"
            android:orderInCategory="100"
            android:title="@string/action_help"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_quit"
            android:onClick="main_menu_quit"
            android:orderInCategory="100"
            android:title="@string/action_quit"
            app:showAsAction="never" />
    </group>
</menu>